...
            "state": "translated",
            "value": "别名把一个地址投递到另一个地址。"
          }
        }
      }
    },
    "Appearance": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "外観"
          }
...
            "state": "translated",
            "value": "已停用"
          }
        }
      }
    },
    "Inbox": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "受信"
          }
...
            "state": "translated",
            "value": "列表"
          }
        }
      }
    },
    "Lists": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "リスト"
          }
...
            "state": "translated",
            "value": "发往这个地址的邮件不会送到任何地方。"
          }
        }
      }
    },
    "Mailboxes": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "メールボックス"
          }
...
            "state": "translated",
            "value": "标为通知"
          }
        }
      }
    },
    "Mark as promotion": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "プロモーションとして分類"
          }
...
            "state": "translated",
            "value": "没有已归档的会话"
          }
        }
      }
    },
    "No conversation selected": {
      "extractionState": "manual",
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "スレッドが選択されていません"
...
            "state": "translated",
            "value": "还没有邮件，下拉即可收取。"
          }
        }
      }
    },
    "No mailboxes yet": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "メールボックスがありません"
          }
...
            "state": "translated",
            "value": "运维"
          }
        }
      }
    },
    "Other mail": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "ほかのメール"
          }
...
            "state": "translated",
            "value": "服务器"
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "設定"
          }
...
