...
                }
                Section {
                    TextField("To", text: $to)
                        .textContentType(.emailAddress)
                        .mailKeyboard()
                        .autocorrectionDisabled()
                        .accessibilityIdentifier("compose.to")
                    if showCopies {
                        TextField("Cc", text: $cc)
                            .textContentType(.emailAddress)
                            .mailKeyboard()
                            .autocorrectionDisabled()
                            .accessibilityIdentifier("compose.cc")
...
